// packages\Grpc.Tools.1.11.0-pre2\tools\windows_x64\protoc.exe --csharp_out Assets\_Scripts\net_comm_system\proto\genlibs --grpc_out Assets\_Scripts\net_comm_system\proto\genlibs Assets\_Scripts\net_comm_system\proto\NetworkService.proto --plugin=protoc-gen-grpc=packages\Grpc.Tools.1.11.0-pre2\tools\windows_x64\grpc_csharp_plugin.exe

syntax = "proto3";

package NetworkService;

service NetworkService {
    // Sends a greeting
    rpc PingService (PingRequest) returns (PingReply) { }

	// Subscription request
	rpc Subscribe (SubscribeRequest) returns (SubscribeReply) { }

	// Send a game state update from master to client
	rpc GameStateUpdate (GameStateUpdateRequest) returns (GameStateUpdateReply) { }

	// Send a client state update from client to master
	rpc ClientStateUpdate (ClientStateUpdateRequest) returns (ClientStateUpdateReply) { }

}

enum PingReplyStatus {
	PINGREPLYSTATUS_SUCCESS = 0;
	PINGREPLYSTATUS_FAILURE = 99;
}

// The request message containing the user's name.
message PingRequest {
	string name = 1;
}

// The response message containing the greetings
message PingReply {
	PingReplyStatus resCode = 1;
}

enum SubscribeReplyStatus {
	SUBSCRIBEREPLYSTATUS_SUCCESS = 0;
	SUBSCRIBEREPLYSTATUS_FAILURE = 99;
}

enum ChannelType {
	CHANNELTYPE_GAMESTATE = 0;
	CHANNELTYPE_CLIENTSTATE = 1;
}

message SubscribeRequest {
	string playerName = 1;
	ChannelType channel = 2;
}

message SubscribeReply {
	SubscribeReplyStatus resCode = 1;
}

enum GameStateUpdateType {
	GAMESTATEUPDATETYPE_PHASE = 0;
}

enum GameStateUpdateReplyStatus {
	GAMESTATEREUPDATEPLYSTATUS_SUCCESS = 0;
	AMESTATEREUPDATEPLYSTATUS_FAILURE = 99;
}

message GameStateUpdateParamType {
	oneof params {
		int32 cardCount = 1;
		bool mulligan = 2;
	}
}

message GameStateUpdateRequest {
	GameStateUpdateType type = 1;
	map<string, GameStateUpdateParamType> params = 2;
}

message GameStateUpdateReply {
	GameStateUpdateReplyStatus resCode = 1;
}

enum ClientStateUpdateType {
	CLIENTSTATEUPDATETYPE_DEFAULT = 0;
	CLIENTSTATEUPDATETYPE_NULL = 99;
}

enum ClientStateUpdateParam {
	CLIENTSTATEUPDATEPARAMTYPE_CARDCOUNT = 0;
	CLIENTSTATEUPDATEARAMTYPE_MULLIGAN = 1;
	CLIENTSTATEUPDATEARAMTYPE_NULL = 99;
}

enum ClientStateUpdateReplyStatus {
	CLIENTSTATEUPDATEREPLYSTATUS_SUCCESS = 0;
	CLIENTSTATEUPDATEREPLYSTATUS_FAILURE = 99;
}

message Pair {
	ClientStateUpdateParam key = 1;
	string value = 2;
}

message Dictionary {
   repeated Pair pairs = 1;
}

message ClientStateUpdateRequest {
   ClientStateUpdateType type = 1;
   Dictionary updateVals = 2;
}

message ClientStateUpdateReply {
	ClientStateUpdateReplyStatus resCode = 1;
}